pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxCannotHaveProperty.pkl
local source {
  foo = "foo"
}

res: Listing = new {
  ...source
}
